# eraa-data-visualizer

./: .gitignore  README.md  README_DASHBOARD.md  config.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: dashboard.py
docs/: ERAA_BACKGROUND.md
scripts/: generate_sample_data.py
src/eraa_visualizer/: __init__.py  cli.py  config.py  loaders.py  models.py  pipeline.py  plots.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_loaders.py  test_models.py  test_pipeline.py  test_plots.py  test_sample_data.py
