[project]
name = "eraa-data-visualizer"
version = "0.1.0"
description = "Visualization pipeline for European Resource Adequacy Assessment (ERAA) model outputs: adequacy, dispatch, net positions, prices, and storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.7.0",
    "pyarrow>=15.0.0",
    "click>=8.1.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
eraa-viz = "eraa_visualizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eraa_visualizer"]

[tool.hatch.build.targets.sdist]
include = ["src/eraa_visualizer", "config.yaml", "README.md", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
